--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "express": "^4.15.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
+  },
+  "engines": {
+    "node": "8.8.1",
+    "npm": "5.4.2"
   }
 }
