--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "engines": {
     "node": "8.8.1",
     "npm": "5.4.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.8.1"
   }
 }
