--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
