--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
+    "mongodb": "^2.2.33",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "request": "^2.83.0",
